[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Teste_cameras(temporario).gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=4]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 3.92588, 0, 0, 0, 0.243531, 0, 0, 0, 3.92588, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 2 )
material/0 = null

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 0.577844, 0, 0, 0, 0.577844, 0, 0, 0, 1, 0, 3.54077, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody"]
mesh = SubResource( 4 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.882012, 6.5715e-09, 0.471227, -0.0643114, 0.990643, 0.120374, -0.466818, -0.136476, 0.873759, 5.56778, 3.09692, 5.98111 )

[node name="Camera2" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.96936, 0.245646, 0, -0.245646, 0.96936, 0, 4.74793, 5.98111 )

[node name="Camera3" type="Camera" parent="."]
transform = Transform( 0.709288, 0, -0.704919, 0, 1, 0, 0.704919, 0, 0.709288, -11.0707, 1.24217, 5.98111 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.473012, 0.641103, -0.604356, 0, 0.685945, 0.727653, 0.881056, -0.344189, 0.32446, -9.85834, 7.54458, 7.17702 )
light_energy = 1.34
shadow_color = Color( 0.470588, 0.384314, 0.384314, 1 )
shadow_bias = 0.02

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( 0.573777, -0.595957, 0.561797, 0, 0.685945, 0.727653, -0.819012, -0.41751, 0.393579, 8.41885, 7.54458, 7.17702 )
light_energy = 1.34
shadow_color = Color( 0.470588, 0.384314, 0.384314, 1 )
shadow_bias = 0.02

[node name="Camera1_pressed" type="Button" parent="."]
margin_right = 76.0
margin_bottom = 20.0
text = "Camera1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2_pressed" type="Button" parent="."]
margin_top = 27.3518
margin_right = 77.0
margin_bottom = 47.3518
text = "Camera2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera3_pressed" type="Button" parent="."]
margin_top = 54.7035
margin_right = 75.0
margin_bottom = 74.7035
text = "Camera3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Camera1_pressed" to="." method="_on_Camera1_pressed_pressed"]
[connection signal="pressed" from="Camera2_pressed" to="." method="_on_Camera2_pressed_pressed"]
[connection signal="pressed" from="Camera3_pressed" to="." method="_on_Camera3_pressed_pressed"]
